登録、更新機能追加

--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -13,5 +13,7 @@
 <p>
   <b>電子メール:</b><%= @item.email %>
 </p>
-<p><%= image_tag @item.image_url  %>
+<p><%= image_tag @item.image_url %>
 </p>
+<%= link_to "編集", edit_item_path  %>
+
