--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -17,3 +17,5 @@
 </p>
 <%= link_to "編集", edit_item_path  %>
 
+<%= link_to "削除", item_path(@item),method: :delete, data:{ confirm: "削除してよろしいですか？"} %>
+
